--- a/src/scss/utilities/colors/_project_default.scss
+++ b/src/scss/utilities/colors/_project_default.scss
@@ -44,7 +44,7 @@ $colors : (
 
 // Base ------------------
 $base-bg     : $white;
-$base-text   : color('default', 'dark-gray');
+$base-text   : $black;
 $base-link   : color('default', 'gray');
 $base-border : color('default', 'light-gray');
 // -----------------------
