--- a/src/scss/general/_general.scss
+++ b/src/scss/general/_general.scss
@@ -1,44 +1,26 @@
-@import '../utilities/variables';
-
-// Footer fixed to bottom
 
 html {
   position: relative;
+  height: 100%;
   min-height: 100%;
 
   body {
     height: 100%;
-    min-height: .1rem;
-    margin-bottom: var('footer-height', 'xsmall');
-  }
-
-  @media (min-width: $small-screen) {
-    body {
-      margin-bottom: var('footer-height', 'small');
-    }
-  }
-
-  @media (min-width: $medium-screen) {
-    body {
-      margin-bottom: var('footer-height', 'medium');
-    }
-  }
-
-  @media (min-width: $large-screen) {
-    body {
-      margin-bottom: var('footer-height', 'large');
-    }
-  }
-  
-  @media (min-width: $xlarge-screen) {
-    body {
-      margin-bottom: var('footer-height', 'xlarge');
-    }
+    min-height: 100%;
   }
 }
 
 // General classes for project
 .wrapper {
   width: 100%;
-  overflow: hidden;
+  min-height: 100%;
+  padding: 0 1.5rem;
+  background-color: #edeef0;
+}
+
+@media (min-width: $small-screen) {
+  .wrapper {
+    display: grid;
+    padding: 0 2.4rem;
+  }
 }
