--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,9 @@
 @import 'base/normalize';
 @import 'base/typography';
 
+// Layouts
+@import 'layouts/flex_container';
+
 // General
 @import 'general/general';
 
