--- a/src/scss/modules/_content.scss
+++ b/src/scss/modules/_content.scss
@@ -65,36 +65,32 @@
   }
 }
 
-@media (min-width: $small-screen) {
+@media (min-width: $small-screen) and (max-width: $medium-screen) {
   [data-wall="attendify"] {
     column-count: 2;
     column-gap: 2rem;
     column-fill: initial;
   }
-
-  .post {
-    margin-bottom: 2.4rem;
-    padding: 2.4rem;
-  }
-
-  header {
-    margin-bottom: 2.4rem;
-
-    .photo {
-      margin-right: 1.6rem;
-    }
-  }
 }
 
-@media (min-width: $large-screen) {
+@media (min-width: $medium-screen) {
   [data-wall="attendify"] {
     column-count: 3;
     column-gap: 2.4rem;
   }
 
   .post {
+    max-width: 36rem;
+    margin-bottom: 2.4rem;
+    padding: 2.4rem;
+
     header {
+      margin-bottom: 2.4rem;
       > div {
+        margin-right: 1.6rem;
+      }
+
+      .photo {
         margin-right: 1.6rem;
       }
     }
